SERVER-37458 Allow coordinateCommitTransaction command to accept writeConcern